tests/baselines/reference/ES5For-of30(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
ES5For-of30.ts(3,6): error TS2461: Type 'string | number' is not an array type.
ES5For-of30.ts(3,7): error TS2322: Type 'number' is not assignable to type 'string'.
ES5For-of30.ts(3,14): error TS2322: Type 'string' is not assignable to type 'number'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== ES5For-of30.ts (3 errors) ====
    var a: string, b: number;
    var tuple: [number, string] = [2, "3"];
    for ([a = 1, b = ""] of tuple) {
         ~~~~~~~~~~~~~~~
!!! error TS2461: Type 'string | number' is not an array type.
          ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
                 ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
        a;
        b;
    }